--- a/RawBencher/App.config
+++ b/RawBencher/App.config
@@ -27,9 +27,9 @@
 		-->
 
     <!-- note: for CoreCLR the connection string is currently hard coded in the app-code; see Program.cs for reasons -->
-		<add name="AdventureWorksConnectionTelerikFluent" connectionString="data source=(localdb)\v11.0;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" providerName="System.Data.SqlClient"/>
-		<add name="AdventureWorks.ConnectionString.SQL Server (SqlClient)" connectionString="data source=(localdb)\v11.0;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" providerName="System.Data.SqlClient"/>
-		<add name="EF.ConnectionString.SQL Server (SqlClient)" connectionString="metadata=res://*/AW.csdl|res://*/AW.ssdl|res://*/AW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096&quot;" providerName="System.Data.EntityClient"/>
+		<add name="AdventureWorksConnectionTelerikFluent" connectionString="data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" providerName="System.Data.SqlClient"/>
+		<add name="AdventureWorks.ConnectionString.SQL Server (SqlClient)" connectionString="data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" providerName="System.Data.SqlClient"/>
+		<add name="EF.ConnectionString.SQL Server (SqlClient)" connectionString="metadata=res://*/AW.csdl|res://*/AW.ssdl|res://*/AW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096&quot;" providerName="System.Data.EntityClient"/>
 	</connectionStrings>
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
