--- a/RawBencher/App.config
+++ b/RawBencher/App.config
@@ -7,8 +7,9 @@
 		-->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
 
-		
-	<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+
+		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+	</configSections>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
 	</startup>
@@ -26,7 +27,7 @@
 			 related to the connection string so the fluent one will crash if it doesn't use its own connection string. 
 		-->
 
-    <!-- note: for CoreCLR the connection string is currently hard coded in the app-code; see Program.cs for reasons -->
+		<!-- note: for CoreCLR the connection string is currently hard coded in the app-code; see Program.cs for reasons -->
 		<add name="AdventureWorksConnectionTelerikFluent" connectionString="data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" providerName="System.Data.SqlClient"/>
 		<add name="AdventureWorks.ConnectionString.SQL Server (SqlClient)" connectionString="data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" providerName="System.Data.SqlClient"/>
 		<add name="EF.ConnectionString.SQL Server (SqlClient)" connectionString="metadata=res://*/AW.csdl|res://*/AW.ssdl|res://*/AW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096&quot;" providerName="System.Data.EntityClient"/>
