--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -10,6 +10,7 @@
   <package id="EntityFramework.Relational.Design" version="7.0.0-rc1-final" targetFramework="net451" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net451" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net46" />
+  <package id="JPB.DataAccess" version="2.0.0.0012" targetFramework="net45" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="1.0.0-rc1-final" targetFramework="net451" />
   <package id="Microsoft.Extensions.Caching.Memory" version="1.0.0-rc1-final" targetFramework="net451" />
   <package id="Microsoft.Extensions.Configuration" version="1.0.0-rc1-final" targetFramework="net451" />
