--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BenchmarkDotNet" version="0.9.6" targetFramework="net461" />
   <package id="Dapper" version="1.50.0-beta9" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net451" />
