--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -22,6 +22,7 @@
   <package id="Microsoft.Extensions.Primitives" version="1.0.0" targetFramework="net461" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net451" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net461" />
+  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.0.4" targetFramework="net461" />
   <package id="ServiceStack.Common" version="4.0.60" targetFramework="net461" />
   <package id="ServiceStack.Interfaces" version="4.0.60" targetFramework="net461" />
   <package id="ServiceStack.OrmLite" version="4.0.60" targetFramework="net461" />
