--- a/L2S/DAL/App.config
+++ b/L2S/DAL/App.config
@@ -1,6 +1,6 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <configuration>
 	<appSettings>
 		<add key="AdventureWorks.ConnectionString.SQL Server (SqlClient)" value="data source=zeusVM\SQLSERVER2005;initial catalog=master;integrated security=SSPI;persist security info=False;packet size=4096"/>
 	</appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
+</configuration>
