--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -1,86 +1,101 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BenchmarkDotNet" version="0.9.9" targetFramework="net461" />
-  <package id="BenchmarkDotNet.Core" version="0.9.9" targetFramework="net461" />
-  <package id="BenchmarkDotNet.Toolchains.Roslyn" version="0.9.9" targetFramework="net461" />
+  <package id="BenchmarkDotNet" version="0.10.0" targetFramework="net461" />
+  <package id="BenchmarkDotNet.Core" version="0.10.0" targetFramework="net461" />
+  <package id="BenchmarkDotNet.Toolchains.Roslyn" version="0.10.0" targetFramework="net461" />
   <package id="Dapper" version="1.50.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net451" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net46" />
+  <package id="linq2db" version="1.0.7.4" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore" version="1.0.1" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="1.0.1" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="1.0.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Options" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.OptionsModel" version="1.0.0-rc1-final" targetFramework="net451" />
-  <package id="Microsoft.Extensions.Primitives" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net451" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net461" />
-  <package id="ServiceStack.Common" version="4.5.0" targetFramework="net461" />
-  <package id="ServiceStack.Interfaces" version="4.5.0" targetFramework="net461" />
-  <package id="ServiceStack.OrmLite" version="4.5.0" targetFramework="net461" />
-  <package id="ServiceStack.OrmLite.SqlServer" version="4.5.0" targetFramework="net461" />
-  <package id="ServiceStack.Text" version="4.5.0" targetFramework="net461" />
-  <package id="System.AppContext" version="4.1.0" targetFramework="net461" />
-  <package id="System.Collections" version="4.0.11" targetFramework="net461" />
-  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net461" />
-  <package id="System.Collections.Immutable" version="1.2.0" targetFramework="net461" />
-  <package id="System.ComponentModel" version="4.0.1" targetFramework="net461" />
-  <package id="System.ComponentModel.Primitives" version="4.1.0" targetFramework="net461" />
-  <package id="System.ComponentModel.TypeConverter" version="4.1.0" targetFramework="net461" />
-  <package id="System.Console" version="4.0.0" targetFramework="net461" />
-  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net461" />
-  <package id="System.Diagnostics.FileVersionInfo" version="4.0.0" targetFramework="net461" />
-  <package id="System.Diagnostics.StackTrace" version="4.0.1" targetFramework="net461" />
-  <package id="System.Diagnostics.Tools" version="4.0.1" targetFramework="net461" />
-  <package id="System.Diagnostics.Tracing" version="4.1.0" targetFramework="net461" />
-  <package id="System.Dynamic.Runtime" version="4.0.11" targetFramework="net461" />
-  <package id="System.Globalization" version="4.0.11" targetFramework="net461" />
-  <package id="System.Interactive.Async" version="3.0.0" targetFramework="net461" />
-  <package id="System.IO" version="4.1.0" targetFramework="net461" />
-  <package id="System.IO.FileSystem" version="4.0.1" targetFramework="net461" />
-  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net461" />
-  <package id="System.Linq" version="4.1.0" targetFramework="net461" />
-  <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net461" />
-  <package id="System.Linq.Queryable" version="4.0.1" targetFramework="net461" />
-  <package id="System.ObjectModel" version="4.0.12" targetFramework="net461" />
-  <package id="System.Reflection" version="4.1.0" targetFramework="net461" />
-  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net461" />
-  <package id="System.Reflection.Metadata" version="1.3.0" targetFramework="net461" />
-  <package id="System.Reflection.Primitives" version="4.0.1" targetFramework="net461" />
-  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net461" />
-  <package id="System.Runtime" version="4.1.0" targetFramework="net461" />
-  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net461" />
-  <package id="System.Runtime.Handles" version="4.0.1" targetFramework="net461" />
-  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net461" />
-  <package id="System.Runtime.Numerics" version="4.0.1" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net461" />
-  <package id="System.Text.Encoding" version="4.0.11" targetFramework="net461" />
-  <package id="System.Text.Encoding.CodePages" version="4.0.1" targetFramework="net461" />
-  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="net461" />
-  <package id="System.Threading" version="4.0.11" targetFramework="net461" />
-  <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.0.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Parallel" version="4.0.1" targetFramework="net461" />
-  <package id="System.Threading.Thread" version="4.0.0" targetFramework="net461" />
-  <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net461" />
-  <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net461" />
-  <package id="System.Xml.XmlDocument" version="4.0.1" targetFramework="net461" />
-  <package id="System.Xml.XPath" version="4.0.1" targetFramework="net461" />
-  <package id="System.Xml.XPath.XDocument" version="4.0.1" targetFramework="net461" />
+  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.1.0" targetFramework="net461" />
+  <package id="ServiceStack.Common" version="4.5.4" targetFramework="net461" />
+  <package id="ServiceStack.Interfaces" version="4.5.4" targetFramework="net461" />
+  <package id="ServiceStack.OrmLite" version="4.5.4" targetFramework="net461" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="4.5.4" targetFramework="net461" />
+  <package id="ServiceStack.Text" version="4.5.4" targetFramework="net461" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.3.0" targetFramework="net461" />
+  <package id="System.ComponentModel" version="4.3.0" targetFramework="net461" />
+  <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="net461" />
+  <package id="System.Console" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net461" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
+  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net461" />
+  <package id="System.Interactive.Async" version="3.1.1" targetFramework="net461" />
+  <package id="System.IO" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Metadata" version="1.4.1" targetFramework="net461" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Thread" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.XPath" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net461" />
 </packages>
