--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -30,6 +30,7 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net451" />
+  <package id="NPoco" version="3.4.6" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net461" />
   <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.1.0" targetFramework="net461" />
   <package id="ServiceStack.Common" version="4.5.4" targetFramework="net461" />
