Memory consumption run added, LLBLGen Pro v5.3.1, oak removed

--- a/RawBencher/RawBencher.csproj
+++ b/RawBencher/RawBencher.csproj
@@ -147,7 +147,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="SD.LLBLGen.Pro.ORMSupportClasses, Version=5.3.0.0, Culture=neutral, PublicKeyToken=ca73b74ba4e3ff27">
-      <HintPath>..\packages\SD.LLBLGen.Pro.ORMSupportClasses.5.3.0-Alpha-20170915\lib\net452\SD.LLBLGen.Pro.ORMSupportClasses.dll</HintPath>
+      <HintPath>..\packages\SD.LLBLGen.Pro.ORMSupportClasses.5.3.1-hotfix-20171023\lib\net452\SD.LLBLGen.Pro.ORMSupportClasses.dll</HintPath>
     </Reference>
     <Reference Include="ServiceStack.Common, Version=4.5.14.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ServiceStack.Common.4.5.14\lib\net45\ServiceStack.Common.dll</HintPath>
@@ -238,11 +238,9 @@
     <Compile Include="Benchers\LLBLGenProNoChangeTrackingRawSQLPocoBencher.cs" />
     <Compile Include="Benchers\LLBLGenProNoChangeTrackingLinqPocoBencher.cs" />
     <Compile Include="Benchers\NPocoBencher.cs" />
-    <Compile Include="Benchers\OakDynamicDbDtoBencher.cs" />
     <Compile Include="Benchers\PetaPocoFastBencher.cs" />
     <Compile Include="Benchers\RawDbDataReaderBencher.cs" />
     <Compile Include="Benchers\IBencher.cs" />
-    <Compile Include="Benchers\OakDynamicDbNormalBencher.cs" />
     <Compile Include="Benchers\OrmLiteBencher.cs" />
     <Compile Include="Benchers\NHibernateNormalBencher.cs" />
     <Compile Include="Benchers\LinqToSqlNoChangeTrackingBencher.cs" />
