--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -36,7 +36,7 @@
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net461" />
   <package id="NPoco" version="3.7.2" targetFramework="net462" />
   <package id="Remotion.Linq" version="2.1.2" targetFramework="net462" />
-  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.3.0-Alpha-20170915" targetFramework="net462" />
+  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.3.1-hotfix-20171023" targetFramework="net462" />
   <package id="ServiceStack.Common" version="4.5.14" targetFramework="net462" />
   <package id="ServiceStack.Interfaces" version="4.5.14" targetFramework="net462" />
   <package id="ServiceStack.OrmLite" version="4.5.14" targetFramework="net462" />
