--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -1,22 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BenchmarkDotNet" version="0.10.9" targetFramework="net462" />
-  <package id="BenchmarkDotNet.Core" version="0.10.9" targetFramework="net462" />
-  <package id="BenchmarkDotNet.Toolchains.Roslyn" version="0.10.9" targetFramework="net462" />
+  <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net462" />
+  <package id="BenchmarkDotNet" version="0.10.10" targetFramework="net462" />
+  <package id="BenchmarkDotNet.Core" version="0.10.10" targetFramework="net462" />
+  <package id="BenchmarkDotNet.Toolchains.Roslyn" version="0.10.10" targetFramework="net462" />
   <package id="Dapper" version="1.50.4-alpha1-00070" targetFramework="net462" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="Iesi.Collections" version="4.0.2" targetFramework="net462" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net46" />
-  <package id="linq2db" version="1.9.0" targetFramework="net462" />
+  <package id="linq2db" version="1.10.0" targetFramework="net462" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.3.2" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.3.2" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.4.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.4.0" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net462" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.3" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore" version="2.0.1" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.0.1" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.0.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Caching.Memory" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net462" />
@@ -29,14 +30,15 @@
   <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.OptionsModel" version="1.0.0-rc1-final" targetFramework="net451" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="net462" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Registry" version="4.4.0" targetFramework="net462" />
-  <package id="NETStandard.Library" version="2.0.0" targetFramework="net462" />
-  <package id="NHibernate" version="4.1.1.4000" targetFramework="net461" />
-  <package id="NPoco" version="3.7.2" targetFramework="net462" />
+  <package id="NETStandard.Library" version="2.0.1" targetFramework="net462" />
+  <package id="NHibernate" version="5.0.1" targetFramework="net462" />
+  <package id="NPoco" version="3.9.2" targetFramework="net462" />
   <package id="Remotion.Linq" version="2.1.2" targetFramework="net462" />
-  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.3.1-hotfix-20171023" targetFramework="net462" />
+  <package id="Remotion.Linq.EagerFetching" version="2.1.0" targetFramework="net462" />
+  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.3.1" targetFramework="net462" />
   <package id="ServiceStack.Common" version="4.5.14" targetFramework="net462" />
   <package id="ServiceStack.Interfaces" version="4.5.14" targetFramework="net462" />
   <package id="ServiceStack.OrmLite" version="4.5.14" targetFramework="net462" />
@@ -87,10 +89,10 @@
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.AccessControl" version="4.4.0" targetFramework="net462" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
   <package id="System.Security.Principal.Windows" version="4.4.0" targetFramework="net462" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.CodePages" version="4.4.0" targetFramework="net462" />
@@ -106,6 +108,7 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.XmlSerializer" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net461" />
 </packages>
